[package]
authors = ["David Irvine <david.irvine@maidsafe.net>"]
description = "Method of recording data securely on decentralised networks"
license = "GPL-3.0"
name = "data_chain"
readme = "README.md"
repository = "https://github.com/dirvine/data_chain"
version = "0.1.1"
edition = "2021"

[dependencies]
bincode = "1.3.3"
fs2 = "0.4.3"
itertools = "0.10.3"
log = "0.4.16"
rayon = "1.5.2"
tiny-keccak = {version = "2.0.2", features = ["sha3"]}
serde = {version = "1.0.136", features =["derive"]}
ed25519 = { version = "1.2.0", features = ["serde_bytes"] }
ed25519-dalek = { version = "1.0.0", features = ["serde"] }
rmp-serde = "1.0.0"
thiserror = "1.0.30"

[dev-dependencies]
env_logger = "0.9.0"
rand = "0.7.0"
tempdir = "0.3.7"
unwrap = "1.2.1"
